Connection to database local and create entities

--- a/RealEstate/RealEstate.Application/RealEstate.Application.csproj
+++ b/RealEstate/RealEstate.Application/RealEstate.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstate.Domain\RealEstate.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
