Implement Property Controller

--- a/RealEstate/RealEstate.Application/RealEstate.Application.csproj
+++ b/RealEstate/RealEstate.Application/RealEstate.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\RealEstate.Domain\RealEstate.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Accounts\" />
+  </ItemGroup>
+
 </Project>
