--- a/RealEstate/RealEstate.Test/RealEstate.Test.csproj
+++ b/RealEstate/RealEstate.Test/RealEstate.Test.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RealEstate.Application\RealEstate.Application.csproj" />
     <ProjectReference Include="..\RealEstate.Infrastructure\RealEstate.Infrastructure.csproj" />
+    <ProjectReference Include="..\RealEstate.Presentation\RealEstate.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
